Integrate Context with pyroomacoustics

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -42,78 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(\"../crazyflie-audio/python/\")\n",
-    "from bin_selection import select_frequencies\n",
-    "from crazyflie_description_py.parameters import N_BUFFER, FS, FFTSIZE\n",
-    "\n",
-    "DURATION_PER_FREQ = 0.5\n",
-    "DURATION_SEC = DURATION_PER_FREQ * FFTSIZE\n",
-    "\n",
-    "\n",
-    "def buzzer_signal(source):\n",
-    "    from signals import generate_signal\n",
-    "\n",
-    "    kwargs = dict(duration_sec=DURATION_SEC, max_dB=-10, Fs=FS,)\n",
-    "    frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "    if source == \"mono4125\":\n",
-    "        return generate_signal(signal_type=\"mono\", frequency_hz=4125, **kwargs)\n",
-    "    elif source == \"random\":\n",
-    "        return generate_signal(signal_type=\"random\", **kwargs)\n",
-    "    elif source == \"multi\":\n",
-    "        phase = np.random.uniform(0, 2 * np.pi)\n",
-    "        signal = generate_signal(\n",
-    "            signal_type=\"mono\",\n",
-    "            frequency_hz=frequencies[1],\n",
-    "            **kwargs,\n",
-    "            phase_offset=phase,\n",
-    "        )\n",
-    "        for f in frequencies[2:]:\n",
-    "            phase = np.random.uniform(0, 2 * np.pi)\n",
-    "            signal += generate_signal(\n",
-    "                signal_type=\"mono\", frequency_hz=f, **kwargs, phase_offset=phase\n",
-    "            )\n",
-    "        return signal\n",
-    "    elif source == \"sweep\":\n",
-    "        # duration of each frequency bin\n",
-    "        min_freq = 100\n",
-    "        max_freq = 4400\n",
-    "\n",
-    "        bins = select_frequencies(\n",
-    "            n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq\n",
-    "        )\n",
-    "\n",
-    "        duration_all = len(bins) * duration_per_freq\n",
-    "        signal = np.zeros(int(FS * duration_all))\n",
-    "        idx = 0\n",
-    "        for f in frequencies[bins]:\n",
-    "\n",
-    "            kwargs[\"duration_sec\"] = duration_per_freq\n",
-    "            mono = generate_signal(signal_type=\"mono\", frequency_hz=f, **kwargs)\n",
-    "            signal[idx : idx + len(mono)] = mono\n",
-    "            idx += len(mono)\n",
-    "        return signal\n",
-    "    else:\n",
-    "        raise ValueError(source)\n",
-    "\n",
-    "\n",
-    "signals = {}\n",
-    "for key in [\"mono4125\", \"random\", \"multi\", \"sweep\"]:\n",
-    "    try:\n",
-    "        signal = pd.read_pickle(f\"results/{key}.pk\")\n",
-    "        print(f\"read {key}\")\n",
-    "    except:\n",
-    "        signal = buzzer_signal(key)\n",
-    "        pd.to_pickle(signal, f\"results/{key}.pk\")\n",
-    "        print(f\"saved {key}\")\n",
-    "    signals[key] = signal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def matrix_slices(\n",
     "    df_matrix,\n",
     "    frequencies,\n",
@@ -206,8 +134,8 @@
     "\n",
     "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
     "\n",
-    "# make sure Hs lie in reasonable range (heuristic)\n",
-    "Hs /= (0.1 * np.linalg.norm(Hs))\n",
+    "# make sure Hs lie in reasonable range\n",
+    "Hs /= np.mean(Hs)\n",
     "\n",
     "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
     "fig, ax = plt.subplots()\n",
@@ -247,8 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_freq_slice_pyroom\n",
-    "import progressbar\n",
+    "from simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "mic_idx = 1\n",
     "distances = np.linspace(0, 60, 100)\n",
@@ -262,13 +190,21 @@
     "    np.testing.assert_allclose(series_all.frequencies, frequencies)\n",
     "    df_matrix = series_all.df_matrix\n",
     "except Exception as e:\n",
-    "    print(e)\n",
+    "    import progressbar\n",
     "    df_matrix = np.zeros((len(frequencies), len(distances)))\n",
+    "    \n",
+    "    try:\n",
+    "        raise\n",
+    "        signal = np.load(WIDEBAND_FILE)\n",
+    "    except:\n",
+    "        print(\"creating wideband signal...\")\n",
+    "        signal = create_wideband_signal(frequencies)\n",
+    "        np.save(WIDEBAND_FILE, signal)\n",
+    "        print(f\"saved as {WIDEBAND_FILE}\")\n",
     "\n",
-    "    signal = signals[\"multi\"]\n",
     "    with progressbar.ProgressBar(max_value=len(distances) - 1) as bar:\n",
     "        for j, distance_cm in enumerate(distances):\n",
-    "            slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
+    "            slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal)\n",
     "            df_matrix[:, j] = slice_mics[mic_idx]\n",
     "            bar.update(j)\n",
     "    series = pd.Series(\n",
