Clean up and fixed tests

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -108,7 +108,7 @@
     "fig, axs = plt.subplots(1, len(angles), squeeze=False)\n",
     "fig.set_size_inches(5 * len(angles), 5)\n",
     "for ax, angle in zip(axs.flatten(), angles):\n",
-    "    room = generate_room(distance_cm=0, yaw_deg=angle, ax=ax)\n",
+    "    room = generate_room(distance_cm=10, azimuth_deg=angle, ax=ax)\n",
     "    ax.set_title(f\"yaw{angle}\")\n",
     "    ax.legend(loc=\"lower left\")"
    ]
@@ -128,16 +128,16 @@
    "source": [
     "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
     "\n",
-    "yaw_deg = 20\n",
-    "distances_cm = np.linspace(0, 40, 100)\n",
+    "azimuth_deg = 20\n",
+    "distances_cm = np.arange(10, 50)\n",
     "frequency = 1000\n",
     "\n",
-    "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
+    "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, azimuth_deg=azimuth_deg)\n",
     "\n",
     "# make sure Hs lie in reasonable range\n",
     "Hs /= np.mean(Hs)\n",
     "\n",
-    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
+    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, azimuth_deg=azimuth_deg)\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(Hs.shape[1]):\n",
     "    ax.plot(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
@@ -157,7 +157,7 @@
     "for chosen_mics in [[0], range(4)]:\n",
     "    exp_data = Hs[:, chosen_mics]\n",
     "    coeffs, d_slice, cost = fit_distance_slice(\n",
-    "        exp_data, distances_cm, yaw_deg, frequency, chosen_mics,\n",
+    "        exp_data, distances_cm, azimuth_deg, frequency, chosen_mics,\n",
     "        method='minimize', optimize_absorption=True, fit_one_gain=False\n",
     "    )\n",
     "    print(coeffs)\n",
@@ -179,11 +179,12 @@
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "mic_idx = 1\n",
-    "distances = np.linspace(0, 60, 100)\n",
+    "distances = np.arange(10, 60)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "\n",
     "fname = \"results/df_matrix_pyroom.pkl\"\n",
     "try:\n",
+    "    raise\n",
     "    series_all = pd.read_pickle(fname)\n",
     "    print(\"read\", fname)\n",
     "    np.testing.assert_allclose(series_all.distances, distances)\n",
@@ -328,7 +329,7 @@
     "freq_cont = np.linspace(min_frequency, max_frequency, 1000)\n",
     "freq = np.linspace(min_frequency, max_frequency, n_freqs)\n",
     "\n",
-    "distances_grid = np.linspace(0, 100, 100)\n",
+    "distances_grid = np.arange(10, 100)\n",
     "n_max = 100  # for zero-padding\n",
     "\n",
     "# highest frequency that we can resolve\n",
@@ -336,7 +337,7 @@
     "delta_max = SPEED_OF_SOUND / (2 * df) * 100\n",
     "print(\"max attainable delta:\", delta_max)\n",
     "d = get_orthogonal_distance_from_global(\n",
-    "    deltas_cm=delta_max, yaw_deg=0, mic_idx=mic_idx\n",
+    "    deltas_cm=delta_max, azimuth_deg=0, mic_idx=mic_idx\n",
     ")\n",
     "print(\"max attainable distance:\", d)\n",
     "\n",
@@ -399,62 +400,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from estimators import DistanceEstimator, get_estimate\n",
-    "def test_distance_estimator(chosen_mics=range(4), distance_cm=10, yaw_deg=0):\n",
-    "    from estimators import DistanceEstimator, get_estimate\n",
-    "    from geometry import D_OFFSET\n",
+    "\n",
+    "def simulate_distance_estimator(\n",
+    "    chosen_mics=range(4), distance_cm=10, azimuth_deg=0, ax=None\n",
+    "):\n",
     "    n_max = 1000\n",
     "    frequencies = np.linspace(1000, 5000, 32)\n",
-    "    slices_f = get_freq_slice_theory(frequencies, distance_cm, chosen_mics=chosen_mics, \n",
-    "                                     yaw_deg=yaw_deg)\n",
-    "    \n",
+    "    slices_f = get_freq_slice_theory(\n",
+    "        frequencies, distance_cm, chosen_mics=chosen_mics, azimuth_deg=azimuth_deg\n",
+    "    )\n",
+    "\n",
     "    distance_estimator = DistanceEstimator()\n",
-    "    plt.figure()\n",
     "    for i, mic_idx in enumerate(chosen_mics):\n",
     "        slice_f = slices_f[:, i]\n",
     "        d_bayes, p_bayes, diff_cm = get_probability_bayes(\n",
     "            slice_f, frequencies, n_max=n_max\n",
     "        )\n",
-    "        #diff_cm = np.array([diff_cm[np.argmax(p_bayes)]])\n",
-    "        #p_bayes = np.array([1.0])\n",
-    "        #distance_estimator.add_distribution(diff_cm*1e-2, p_bayes, mic_idx)\n",
-    "        distance_estimator.add_distribution(diff_cm*1e-2, p_bayes, mic_idx)\n",
-    "        \n",
-    "        plt.scatter(diff_cm, p_bayes, color=f'C{mic_idx}', label=f'mic{mic_idx}')\n",
-    "    plt.xlabel('path difference [cm]')\n",
-    "    plt.legend()\n",
-    "    \n",
-    "    distance_estimate = distance_cm * 1e-2 #+ D_OFFSET\n",
-    "    thetas, probs = distance_estimator.get_angle_distribution(distance_estimate=distance_estimate)\n",
-    "    theta = get_estimate(thetas, probs)\n",
-    "    fig, axs = plt.subplots(1, 2)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    axs[0].scatter(thetas, probs)\n",
-    "    axs[0].set_xlabel('wall angle [deg]')\n",
-    "    axs[0].set_ylabel('probability [-]')\n",
-    "    axs[0].axvline(theta)\n",
-    "    \n",
-    "    ds, probs = distance_estimator.get_distance_distribution()\n",
-    "    d = get_estimate(ds, probs)\n",
-    "    \n",
-    "    axs[1].scatter(ds * 100, probs)\n",
-    "    axs[1].set_xlabel('wall distance [cm]')\n",
-    "    axs[1].set_ylabel('probability [-]')\n",
-    "    axs[1].axvline(d * 100)\n",
-    "    fig.suptitle(f\"d {distance_cm}cm, yaw {yaw_deg}deg, mics {chosen_mics}\")\n",
-    "    \n",
-    "yaw_deg = 0\n",
-    "distance_cm = 20\n",
-    "distance_estimator = DistanceEstimator()\n",
-    "distance_estimator.context.plot(distance=distance_cm*1e-2, yaw_deg=yaw_deg)\n",
-    "test_distance_estimator(chosen_mics=range(4), yaw_deg=yaw_deg, distance_cm=distance_cm)\n",
-    "for mic in range(4):\n",
-    "    test_distance_estimator(chosen_mics=[mic], yaw_deg=yaw_deg, distance_cm=distance_cm)"
+    "        distance_estimator.add_distribution(diff_cm * 1e-2, p_bayes, mic_idx)\n",
+    "        if ax is not None:\n",
+    "            ax.scatter(diff_cm, p_bayes, color=f\"C{mic_idx}\", label=f\"mic{mic_idx}\")\n",
+    "            \n",
+    "    if ax is not None:\n",
+    "        ax.set_xlabel(\"path difference [cm]\")\n",
+    "        ax.set_ylabel(\"probability [-]\")\n",
+    "        ax.legend()\n",
+    "    return distance_estimator"
    ]
   },
   {
@@ -463,11 +437,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_distance_estimator(distance_cm=10)\n",
-    "test_distance_estimator(distance_cm=30)\n",
-    "test_distance_estimator(yaw_deg=50)\n",
+    "azimuth_deg = 0\n",
+    "distance_cm = 20\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "fig, ax_all = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "\n",
+    "distance_estimator = simulate_distance_estimator(\n",
+    "    chosen_mics=range(4), azimuth_deg=azimuth_deg, distance_cm=distance_cm, ax=ax\n",
+    ")\n",
+    "\n",
+    "ds, probs = distance_estimator.get_distance_distribution()\n",
+    "d = get_estimate(ds, probs)\n",
+    "\n",
+    "ax_all.scatter(ds * 100, probs, label='all')\n",
+    "ax_all.axvline(d * 100, color='k')\n",
+    "assert np.abs(d * 100 - distance_cm) <= 1, (distance_cm, d * 100)\n",
+    "\n",
     "for mic in range(4):\n",
-    "    test_distance_estimator(chosen_mics=[mic], yaw_deg=70)"
+    "    distance_estimator = simulate_distance_estimator(\n",
+    "        chosen_mics=[mic], azimuth_deg=azimuth_deg, distance_cm=distance_cm, ax=ax\n",
+    "    )\n",
+    "    ds, probs = distance_estimator.get_distance_distribution()\n",
+    "    d = get_estimate(ds, probs)\n",
+    "    \n",
+    "    ax_all.scatter(ds * 100, probs, label=f'mic{mic}', color=f'C{mic}')\n",
+    "    ax_all.axvline(d * 100, color=f'C{mic}')\n",
+    "    \n",
+    "ax_all.set_xlabel(\"wall distance [cm]\")\n",
+    "ax_all.set_ylabel(\"probability [-]\")\n",
+    "ax_all.legend()\n",
+    "\n",
+    "distance_estimator.context.plot(distance=distance_cm * 1e-2, azimuth_deg=azimuth_deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "for n_mics in range(2, 5):\n",
+    "    for chosen_mics in itertools.combinations(range(4), n_mics):\n",
+    "        de = simulate_distance_estimator(\n",
+    "            chosen_mics=chosen_mics, azimuth_deg=azimuth_deg, distance_cm=distance_cm\n",
+    "        )\n",
+    "        ds, probs = de.get_distance_distribution()\n",
+    "        d = get_estimate(ds, probs)\n",
+    "\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(10, 5)\n",
+    "        ax.scatter(ds * 100, probs)\n",
+    "        ax.set_xlabel(\"wall distance [cm]\")\n",
+    "        ax.set_ylabel(\"probability [-]\")\n",
+    "        ax.axvline(d * 100)\n",
+    "        ax.set_title(chosen_mics)\n",
+    "        #assert np.abs(d * 100 - distance_cm) < 1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import progressbar\n",
+    "results = pd.DataFrame(columns=['distance_cm', 'azimuth_deg', 'mics', 'error', 'estimate'])\n",
+    "distances_cm = [30] #np.arange(10, 50, step=10)\n",
+    "azimuths_deg = [-40] #np.arange(-180, 180, step=30)\n",
+    "n_mics_list = range(2, 5)\n",
+    "\n",
+    "combinations = []\n",
+    "for n in n_mics_list:\n",
+    "    combinations += list(itertools.combinations(range(4), n))\n",
+    "n_combinations = len(combinations)\n",
+    "print(combinations)\n",
+    "\n",
+    "max_value = len(distances_cm) * len(azimuths_deg) * n_combinations\n",
+    "i = 0\n",
+    "with progressbar.ProgressBar(max_value=max_value) as p:\n",
+    "    for distance_cm, azimuth_deg in itertools.product(distances_cm, azimuths_deg):\n",
+    "        for chosen_mics in combinations:\n",
+    "            de = simulate_distance_estimator(\n",
+    "                chosen_mics=chosen_mics, azimuth_deg=azimuth_deg, distance_cm=distance_cm\n",
+    "            )\n",
+    "            d = de.get_distance_estimate() * 100\n",
+    "            results.loc[len(results), :] = dict(\n",
+    "                distance_cm=distance_cm,\n",
+    "                azimuth_deg=azimuth_deg,\n",
+    "                mics=chosen_mics,\n",
+    "                error=abs(d-distance_cm),\n",
+    "                estimate=d\n",
+    "            )\n",
+    "            p.update(i); i += 1\n",
+    "            \n",
+    "import seaborn as sns\n",
+    "plt.figure()\n",
+    "i = 0\n",
+    "for labels, df in results.groupby(['mics', 'distance_cm']):\n",
+    "    plt.scatter(df.azimuth_deg, df.error, label=f\"{labels}\", color=f'C{i}')\n",
+    "    i += 1\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### angle estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "azimuth_deg = 30\n",
+    "distance_cm = 20\n",
+    "distance_gt = distance_cm * 1e-2\n",
+    "\n",
+    "distance_estimator = simulate_distance_estimator(\n",
+    "    chosen_mics=range(4), azimuth_deg=azimuth_deg, distance_cm=distance_cm, ax=ax\n",
+    ")\n",
+    "\n",
+    "fig, ax_all = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "\n",
+    "distance_estimator = simulate_distance_estimator(\n",
+    "    chosen_mics=range(4), azimuth_deg=azimuth_deg, distance_cm=distance_cm, ax=ax\n",
+    ")\n",
+    "thetas, probs = distance_estimator.get_angle_distribution(\n",
+    "    distance_estimate_m=distance_gt\n",
+    ")\n",
+    "theta = get_estimate(thetas, probs)\n",
+    "ax_all.scatter(thetas, probs, label=f'all, estimate={theta}')\n",
+    "ax_all.axvline(theta, color=f'C{mic}')\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "for mic in range(4):\n",
+    "    distance_estimator = simulate_distance_estimator(\n",
+    "        chosen_mics=[mic], azimuth_deg=azimuth_deg, distance_cm=distance_cm, ax=ax\n",
+    "    )\n",
+    "    thetas, probs = distance_estimator.get_angle_distribution(\n",
+    "        distance_estimate_m=distance_gt\n",
+    "    )\n",
+    "    theta = get_estimate(thetas, probs)\n",
+    "    ax_all.scatter(thetas, probs, label=f'mic{mic}, estimate={theta}')\n",
+    "    ax_all.axvline(theta, color=f'C{mic}')\n",
+    "    \n",
+    "ax_all.set_xlabel(\"wall angle [deg]\")\n",
+    "ax_all.set_ylabel(\"probability [-]\")\n",
+    "ax_all.set_title(f\"d {distance_cm}cm, yaw {azimuth_deg}deg\")\n",
+    "ax_all.legend()\n",
+    "distance_estimator.context.plot(distance=distance_cm * 1e-2, azimuth_deg=azimuth_deg)"
    ]
   },
   {
@@ -490,7 +620,7 @@
     "absolute_yaws = np.random.normal(0, 1, len(freq))\n",
     "\n",
     "deltas, d0 = get_deltas_from_global(\n",
-    "    yaw_deg=nominal_yaw, distances_cm=distances, mic_idx=mic_idx\n",
+    "    azimuth_deg=nominal_yaw, distances_cm=distances, mic_idx=mic_idx\n",
     ")\n",
     "nominal_delta, d0 = get_deltas_from_global(nominal_yaw, nominal_distance, mic_idx)\n",
     "deltas_noisy, d0 = get_deltas_from_global(\n",
@@ -544,7 +674,7 @@
    "source": [
     "from inference import get_approach_angle_fft\n",
     "from simulation import factor_distance_to_delta\n",
-    "yaw_deg = 20\n",
+    "azimuth_deg = 20\n",
     "n_methods = 2\n",
     "\n",
     "gamma_deg = 30\n",
@@ -561,7 +691,7 @@
     "    gamma_deg / 180 * np.pi\n",
     ")\n",
     "for mic_idx in range(4):\n",
-    "    deltas_m, d0 = get_deltas_from_global(yaw_deg, distances_cm, mic_idx)\n",
+    "    deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
     "\n",
     "    slice_d = get_df_theory_simple(deltas_m, [frequency], flat=True, d0=d0)\n",
     "\n",
@@ -597,7 +727,7 @@
     "from inference import get_approach_angle_fft, get_approach_angle_cost\n",
     "from geometry import get_orthogonal_distance_from_global\n",
     "\n",
-    "yaw_deg = 0\n",
+    "azimuth_deg = 0\n",
     "mic_idx = 1\n",
     "n_methods = 2\n",
     "\n",
@@ -613,7 +743,7 @@
     "n_max = 1000\n",
     "\n",
     "distances_max = np.linspace(start_distance_cm-max(relative_distances_cm), start_distance_cm, 100)\n",
-    "deltas_max, d0 = get_deltas_from_global(yaw_deg, distances_max, mic_idx)\n",
+    "deltas_max, d0 = get_deltas_from_global(azimuth_deg, distances_max, mic_idx)\n",
     "\n",
     "sigma_y = 1e-2 #0 \n",
     "for sigma_y in [0] + list(np.logspace(-3, 0, 4)):\n",
@@ -625,7 +755,7 @@
     "        distances_cm = start_distance_cm - relative_distances_cm * np.sin(\n",
     "            gamma_deg / 180 * np.pi\n",
     "        )\n",
-    "        deltas_m, d0 = get_deltas_from_global(yaw_deg, distances_cm, mic_idx)\n",
+    "        deltas_m, d0 = get_deltas_from_global(azimuth_deg, distances_cm, mic_idx)\n",
     "\n",
     "        d_m = np.abs(np.mean(np.diff(distances_cm))) * 1e-2\n",
     "        D_m = (np.max(distances_cm) - np.min(distances_cm)) * 1e-2\n",
@@ -782,8 +912,8 @@
     "    ds = context.get_total_distance(delta, yaw_arr, mic_idx=0)\n",
     "    d_matrix[:, j] = ds\n",
     "    \n",
-    "for i, yaw_deg in enumerate(yaw_arr):\n",
-    "    ds = context.get_total_distance(delta_arr, yaw_deg, mic_idx=0)\n",
+    "for i, azimuth_deg in enumerate(yaw_arr):\n",
+    "    ds = context.get_total_distance(delta_arr, azimuth_deg, mic_idx=0)\n",
     "    d_matrix[i, :] = ds\n",
     "    \n",
     "\n",
@@ -835,7 +965,7 @@
     "mic_idx = 3\n",
     "frequencies = np.linspace(1000, 5000, 100)\n",
     "distances_cm = np.arange(50, step=5)\n",
-    "yaw_deg = np.arange(-180, 180)\n",
+    "azimuth_deg = np.arange(-180, 180)\n",
     "\n",
     "sigmas_distance = np.arange(20)\n",
     "sigmas_yaw = np.arange(-180, 180)\n",
@@ -851,7 +981,7 @@
     "axs[0].set_ylabel(\"$\\\\sigma_\\\\Delta [cm]$\")\n",
     "axs[0].legend(loc=\"upper left\", title=\"distance $d$\")\n",
     "\n",
-    "for yaw in yaw_deg[:: len(yaw_deg) // 10]:\n",
+    "for yaw in azimuth_deg[:: len(azimuth_deg) // 10]:\n",
     "    delta, d0 = get_deltas_from_global(yaw, 0, mic_idx)\n",
     "    delta_noisy, d0 = get_deltas_from_global(yaw, sigmas_distance, mic_idx)\n",
     "    sigmas_delta = 1e2 * abs(delta - delta_noisy)\n",
@@ -887,7 +1017,7 @@
     "    \n",
     "    distances_cm = results_df.distance.unique()\n",
     "    deltas_m, d0 = get_deltas_from_global(\n",
-    "        distances_cm=distances_cm, mic_idx=MIC_IDX, yaw_deg=YAW_DEG\n",
+    "        distances_cm=distances_cm, mic_idx=MIC_IDX, azimuth_deg=YAW_DEG\n",
     "    )\n",
     "    alpha0 = 1 / (4 * np.pi * d0)\n",
     "    alpha1 = (1 - WALL_ABSORPTION) / (4 * np.pi * (deltas_m + d0))\n",
@@ -1233,28 +1363,28 @@
     "from geometry import *\n",
     "\n",
     "distance = 3\n",
-    "yaw_deg = 70 #+ mic_idx * 90\n",
+    "azimuth_deg = 70 #+ mic_idx * 90\n",
     "\n",
     "#context = Context.get_crazyflie_setup()\n",
     "context = Context.get_standard_setup()\n",
     "\n",
     "for mic_idx in range(4):\n",
-    "    #yaw_deg = 45 + mic_idx * 90\n",
+    "    #azimuth_deg = 45 + mic_idx * 90\n",
     "    context.source = context.mics[mic_idx] * 2\n",
-    "    n = get_normal(distance, yaw_deg)[:2]\n",
+    "    n = get_normal(distance, azimuth_deg)[:2]\n",
     "    \n",
     "    context.plot(normal=n)\n",
     "    \n",
     "    delta = context.get_delta_from_normal(n, mic_idx)\n",
     "    \n",
-    "    distance_est = context.get_total_distance(delta, yaw_deg, mic_idx)\n",
-    "    source_distance = context.get_source_distance(delta, yaw_deg, mic_idx)\n",
-    "    yaw_est = context.get_angles(delta, source_distance, mic_idx)\n",
-    "    print(yaw_est)\n",
+    "    distance_est = context.get_total_distance(delta, azimuth_deg, mic_idx)\n",
+    "    source_distance = context.get_source_distance(delta, azimuth_deg, mic_idx)\n",
+    "    azimuth_est = context.get_angles(delta, source_distance, mic_idx)\n",
+    "    print(azimuth_est)\n",
     "    #assert delta_est == 2, delta_est\n",
     "    #assert source_distance == 1, source_distance\n",
     "    np.testing.assert_allclose(distance_est, distance)\n",
-    "    assert yaw_deg in yaw_est, (yaw_est, yaw_deg)"
+    "    assert azimuth_deg in azimuth_est, (azimuth_est, azimuth_deg)"
    ]
   },
   {
