--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -35,29 +35,24 @@
     "from simulation import get_setup\n",
     "\n",
     "distance = 5\n",
-    "yaws = [0, 15, 30]\n",
+    "azimuths = [0, 15, 30]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
-    "\n",
-    "source, mic_positions = get_setup(distance_cm=distance, yaw_deg=yaws[0])\n",
-    "[ax.scatter(*mic[:2], label=f'mic{i}, yaw={yaws[0]}deg', marker='x') for i, mic in enumerate(mic_positions)]\n",
-    "for yaw_deg in yaws[1:]:\n",
-    "    source, mic_positions = get_setup(distance_cm=distance, yaw_deg=yaw_deg, ax=ax)\n",
-    "ax.set_title(f\"setup for distance={distance}cm and angles={yaws}deg\")\n",
-    "\n",
+    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuths[0])\n",
+    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuths[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
+    "for azimuth_deg in azimuths[1:]:\n",
+    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg, ax=ax)\n",
+    "ax.set_title(f\"wall distance $d=${distance}cm and angle $\\\\theta$={azimuths}deg\")\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
-    "h_mics = {l: h for h, l in zip(handles, labels) if 'yaw=' in l}\n",
+    "h_mics = {l: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
     "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
     "\n",
     "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
     "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.5, 0])\n",
     "ax.add_artist(l1)\n",
-    "\n",
-    "ax.set_xlabel(\"x [cm]\")\n",
-    "ax.set_ylabel(\"y [cm]\")\n",
-    "#ax.axis(\"equal\")\n",
-    "\n",
+    "ax.set_xlabel(\"x [m]\")\n",
+    "ax.set_ylabel(\"y [m]\")\n",
     "fig.savefig(f'plots/setup.pdf', bbox_inches='tight')"
    ]
   },
@@ -235,8 +230,9 @@
    "source": [
     "# distance slice algorithm\n",
     "from inference import get_approach_angle_fft\n",
-    "from plotting_tools import plot_performance\n",
+    "from plotting_tools import plot_performance, save_fig\n",
     "\n",
+    "EPS = 1e-10\n",
     "gt_gamma = 90 # in degrees\n",
     "err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
     "for i, f in enumerate(df_freq):\n",
@@ -246,17 +242,31 @@
     "    plt.figure()\n",
     "    for mic_idx in range(df_matrix.shape[0]):\n",
     "        d_slice = d_slices[mic_idx]\n",
-    "        gammas, prob, *_ = get_approach_angle_fft(d_slice, f, df_dist, mic_idx,\n",
-    "                                              n_max=1000, bayes=False)\n",
-    "        gamma = gammas[np.argmax(prob)]\n",
-    "        plt.plot(gammas, prob)\n",
-    "        plt.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "        ratio, prob = get_approach_angle_fft(d_slice, f, df_dist,\n",
+    "                                             n_max=1000, bayes=False)\n",
+    "        \n",
+    "        factor = 2 # TODO(FD): in practice, this depends on wall angle and distance. \n",
+    "        \n",
+    "        sin_gamma = ratio / factor\n",
+    "        \n",
+    "        #prob[sin_gamma > 1] = 0\n",
+    "        plt.plot(sin_gamma, prob)\n",
+    "        \n",
+    "        sin_max = sin_gamma[np.argmax(prob)]\n",
+    "        if sin_max <= 1:\n",
+    "            gamma = np.arcsin(sin_max) * 180 / np.pi\n",
+    "        elif sin_max <= 1 + EPS:\n",
+    "            gamma = 90\n",
+    "        else:\n",
+    "            print('warning, invalid sine:', sin_max)\n",
+    "            continue\n",
+    "        plt.axvline(sin_max, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
     "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "        \n",
     "    plt.title(f'frequency {f:.0f}Hz')\n",
     "    plt.xlabel('angle of approach $\\\\gamma$ [deg]')\n",
     "    plt.ylabel('probability')\n",
-    "    plt.legend()\n",
+    "    #plt.legend()\n",
     "        \n",
     "fname = f\"{exp_name}_{motors}\"\n",
     "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
@@ -335,7 +345,7 @@
     "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
-    "df_theory_pruned = get_df_theory(df_freq, df_dist, chosen_mics)\n",
+    "df_theory_pruned = get_df_theory(df_freq, df_dist, chosen_mics=chosen_mics)\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
     "    values = None\n",
@@ -438,7 +448,7 @@
    "source": [
     "from inference import get_probability_cost, get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
-    "from distance_estimator import DistanceEstimator\n",
+    "from estimators import DistanceEstimator, get_estimate\n",
     "import progressbar\n",
     "\n",
     "err_df = pd.DataFrame(columns=['method', 'mic', 'distance', 'error', 'algorithm'])\n",
@@ -484,7 +494,7 @@
     "                    slice_exp, freqs, \n",
     "                    distances_grid, mic_idx=mic_idx\n",
     "                )\n",
-    "                distances_bayes, proba_bayes = get_probability_bayes(\n",
+    "                distances_bayes, proba_bayes, diff_bayes = get_probability_bayes(\n",
     "                    slice_exp,\n",
     "                    freqs, \n",
     "                    mic_idx=mic_idx,\n",
@@ -492,14 +502,14 @@
     "                    sigma=std\n",
     "                )\n",
     "                \n",
-    "                distance_estimators[method].add_distribution(distances_bayes, proba_bayes, mic_idx)\n",
+    "                distance_estimators[method].add_distribution(diff_bayes * 1e-2, proba_bayes, mic_idx)\n",
     "\n",
     "                for algo, proba, distances_here in zip(\n",
     "                    [\"cost\", \"bayes\"],\n",
     "                    [proba_cost, proba_bayes],\n",
     "                    [distances_grid, distances_bayes],\n",
     "                ):\n",
-    "                    d = DistanceEstimator.get_estimate(distances_here, proba)\n",
+    "                    d = get_estimate(distances_here, proba)\n",
     "                    err_df.loc[len(err_df), :] = {\n",
     "                        'error': d - distance,\n",
     "                        'mic': mic_idx,\n",
@@ -508,16 +518,16 @@
     "                        'algorithm': algo\n",
     "                    }\n",
     "                    \n",
-    "        for method, distance_estimator in distance_estimators.items():\n",
-    "            distances_here, proba = distance_estimator.get_distance_distribution()\n",
-    "            d = DistanceEstimator.get_estimate(distances_here, proba)\n",
-    "            err_df.loc[len(err_df), :] = {\n",
-    "                'error': d - distance,\n",
-    "                'mic': -1,\n",
-    "                'distance': distance,\n",
-    "                'method': method, \n",
-    "                'algorithm': 'bayes-combination' \n",
-    "            }"
+    "        #for method, distance_estimator in distance_estimators.items():\n",
+    "        #    distances_here, proba = distance_estimator.get_distance_distribution()\n",
+    "        #    d = get_estimate(distances_here, proba)\n",
+    "        #    err_df.loc[len(err_df), :] = {\n",
+    "        #        'error': d - distance,\n",
+    "        #        'mic': -1,\n",
+    "        #        'distance': distance,\n",
+    "        #        'method': method, \n",
+    "        #        'algorithm': 'bayes-combination' \n",
+    "        #    }"
    ]
   },
   {
@@ -529,7 +539,8 @@
     "from plotting_tools import plot_performance\n",
     "titles = {\n",
     "    'cost': 'optimization-based method',\n",
-    "    'bayes': 'FFT-based method'\n",
+    "    'bayes': 'FFT-based method',\n",
+    "    'bayes-combination': 'combination'\n",
     "}\n",
     "err_df = err_df.apply(pd.to_numeric, axis=0, errors='ignore')\n",
     "\n",
