--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -403,40 +403,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from estimators import DistanceEstimator, get_estimate\n",
+    "from simulation import simulate_distance_estimator\n",
+    "from estimators import get_estimate\n",
     "\n",
-    "def simulate_distance_estimator(\n",
-    "    chosen_mics=range(4), distance_cm=10, azimuth_deg=0, ax=None\n",
-    "):\n",
-    "    n_max = 1000\n",
-    "    frequencies = np.linspace(1000, 5000, 32)\n",
-    "    slices_f = get_freq_slice_theory(\n",
-    "        frequencies, distance_cm, chosen_mics=chosen_mics, azimuth_deg=azimuth_deg\n",
-    "    )\n",
-    "\n",
-    "    distance_estimator = DistanceEstimator()\n",
-    "    for i, mic_idx in enumerate(chosen_mics):\n",
-    "        slice_f = slices_f[:, i]\n",
-    "        d_bayes, p_bayes, diff_cm = get_probability_bayes(\n",
-    "            slice_f, frequencies, n_max=n_max\n",
-    "        )\n",
-    "        distance_estimator.add_distribution(diff_cm * 1e-2, p_bayes, mic_idx)\n",
-    "        if ax is not None:\n",
-    "            ax.scatter(diff_cm, p_bayes, color=f\"C{mic_idx}\", label=f\"mic{mic_idx}\")\n",
-    "            \n",
-    "    if ax is not None:\n",
-    "        ax.set_xlabel(\"path difference [cm]\")\n",
-    "        ax.set_ylabel(\"probability [-]\")\n",
-    "        ax.legend()\n",
-    "    return distance_estimator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "azimuth_deg = 0\n",
     "distance_cm = 20\n",
     "\n",
@@ -482,7 +451,8 @@
    "outputs": [],
    "source": [
     "import itertools\n",
-    "for n_mics in range(2, 5):\n",
+    "\n",
+    "for n_mics in range(1, 5):\n",
     "    for chosen_mics in itertools.combinations(range(4), n_mics):\n",
     "        de = simulate_distance_estimator(\n",
     "            chosen_mics=chosen_mics, azimuth_deg=azimuth_deg, distance_cm=distance_cm\n",
@@ -497,6 +467,7 @@
     "        ax.set_ylabel(\"probability [-]\")\n",
     "        ax.axvline(d * 100)\n",
     "        ax.set_title(chosen_mics)\n",
+    "        print(d*100 - distance_cm)\n",
     "        #assert np.abs(d * 100 - distance_cm) < 1e-3"
    ]
   },
