Split crazyflie and audio parameters

--- a/notebooks/Theory.ipynb
+++ b/notebooks/Theory.ipynb
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crazyflie_description_py.parameters import N_BUFFER, FS, TUKEY_ALPHA\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "from audio_stack.parameters import TUKEY_ALPHA\n",
     "f = 3000\n",
     "noise_scale = 0.1 \n",
     "times = np.arange(0, 1, step=1/FS)\n",
